--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
                     <ul>
                     <a>
                         <li><a href="/www.instagram.com" target="_blank">
-                        <img src="/index.html/photo8.jpg"/>
+                        <img src="./index.html/photo8.jpg"/>
                     </a></li>
                     
                     <a>
                         <li><a href="/www.skype.com" target="_blank">
-                        <img src="/index.html/photo9.jpg"/>
+                        <img src="./index.html/photo9.jpg"/>
                     </a></li>
 
                     <a>
                         <li><a href="/www.facebook.com" target="_blank">
-                        <img src="/index.html/photo10.jpg"/>
+                        <img src="./index.html/photo10.jpg"/>
                     </a></li>
                       </ul>
   
