--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                     <a>
                         <li><a href="/www.facebook.com" target="_blank">
-                        <img src="./index.html/photo10.jpg"/>
+                        <img src=".\index.html\photo10.jpg"/>
                     </a></li>
                       </ul>
   
