--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </ul>
                 <ul>
                     <li><a href="#Motion Graphic">Motion Graphic</a>
-                    <img src="./images/photo1.jpg"
+                    <img src="photo1.jpg"
                     width="400"
                     alt="Ręka z laptopem"/>
                     Android App</li>
